--- a/Code/Front_End/Pages/ManageCourses.cshtml
+++ b/Code/Front_End/Pages/ManageCourses.cshtml
@@ -8,19 +8,18 @@
 <script src="~/js/CourseManagement.js"></script>
 
 <div class="PageRow Flex CenterFlex">
-    <div class="Block Border Padded">
+    <div class="Border" id="SearchBox">
         <div class="Title">Course Search</div>
         <div class="Flex CenterFlex">
             <div class="Flex ">
                 <div class="LabelLeft">Courses Numbered:</div>
-                <div class="LabelRight"><input type="text" style="width: 20%;" value="0" /> to <input type="text" style="width: 20%;" value="999" /></div>
+                <div class="LabelRight"><input type="text" style="width: 20%;" value="0" id="MinCourseSearch"/> to <input type="text" style="width: 20%;" value="999" id="MaxCourseSearch"/></div>
             </div>
             <div class="Flex">
                 <div class="LabelLeft">Department:</div>
                 <div class="LabelRight">
-                    <select name="Department">
-                        <option>Computer Science</option>
-                        <option>Mathematics</option>
+                    <select id="DepartmentSearch" name="Department">
+                        <option value="any">--- Any ---</option>
                     </select>
                 </div>
             </div>
@@ -30,35 +29,20 @@
             <div class="Flex">
                 <div class="LabelLeft Border">Courses Offered:</div>
                 <div class="LabelRight Flex">
-                    <input type="checkbox" /> Summer
-                    <input type="checkbox" value="checked" /> Fall
-                    <input type="checkbox" value="checked" /> Winter
-                    <input type="checkbox" value="checked" /> Spring
+                    <input type="checkbox" id="SummerSearch"/> Summer
+                    <input type="checkbox" id="FallSearch" checked/> Fall
+                    <input type="checkbox" id="WinterSearch" checked/> Winter
+                    <input type="checkbox" id="SpringSearch" checked/> Spring
                 </div>
             </div>
         </div>
 
-        <div><input type="submit" value="Search" class="BigButton" /></div>
+        <div><input type="submit" value="Search" class="BigButton" id="SearchCourses"/></div>
     </div>
 </div>
 
-<div class="Flex CenterFlex" style="min-width: 1000px;">
-    <div class="Block Padded" id="CourseContainer">
-        <div class="Title">Courses</div>
-        <div class="Flex CenterFlex Row skip" style="margin-bottom: 10px;">
-            <div class="Element ButtonElement">[X]</div>
-            <div class="Element CourseElement">Course Title</div>
-            <div class="Element CourseElement">Department</div>
-            <div class="Element CourseElement CourseNumberInput">Number</div>
-            <div class="Element CourseElement CourseNumberInput">Credits</div>
-            <div class="Element ButtonElement">Su</div>
-            <div class="Element ButtonElement">F</div>
-            <div class="Element ButtonElement">W</div>
-            <div class="Element ButtonElement">S</div>
-            <div class="Element WideFlex">Prereqs</div>
-        </div>
-
-
+<div class="Flex CenterFlex">
+    <div class="" id="CourseContainer">
 
     </div>
     <div style="width: 100%; text-align: center;">
