Finished Course Management and Prerequisite Page

--- a/Code/Front_End/Pages/ManageCourses.cshtml
+++ b/Code/Front_End/Pages/ManageCourses.cshtml
@@ -6,7 +6,7 @@
 
 <script src="~/js/ListManager.js"></script>
 <script src="~/js/CourseManagement.js"></script>
-
+<a href="#" id="TestButton">TEST</a>
 <div class="PageRow Flex CenterFlex">
     <div class="Border" id="SearchBox">
         <div class="Title">Course Search</div>
@@ -46,11 +46,9 @@
 
     </div>
     <div style="width: 100%; text-align: center;">
-        <button type="button" class="BigButton" style="width: 150px; margin-top: 5px;" id="AddNewCourseButton">Add New Course</button>
-        <button type="button" class="BigButton" style="width: 150px; margin-top: 5px;" id="SaveCourses">Save Changes</button>
+        <button type="button" class="RegularButton" id="AddNewCourseButton">Add New Course</button>
+        <button type="button" class="RegularButton" id="SaveCourses">Save Changes</button>
     </div>
-
-
 </div>
 
 
