--- a/Code/Front_End/wwwroot/css/Layout.css
+++ b/Code/Front_End/wwwroot/css/Layout.css
@@ -33,7 +33,7 @@
     font-size: 4em;
     background-color: black;
     color: white;
-    box-shadow: 0px 0px 5px 25px rgba(0,0,0,1);
+    box-shadow: 0 0 5px 25px rgba(0,0,0,1);
 }
 
 #CwuHome {
@@ -170,7 +170,7 @@
 }
 
 .Element {
-    margin: 0px;
+    margin: 0;
     border: 1px solid black;
     line-height: 30px;
     vertical-align: middle;
@@ -181,10 +181,14 @@
     width: 30px;
 }
 
+.CourseNumberElement {
+    width: 80px;
+}
+
 .Row {
     flex-wrap: nowrap;
-    margin-bottom: 0px;
-    padding: 0px;
+    margin-bottom: 0;
+    padding:0;
     background-color: #ffffff;
 }
 
@@ -219,11 +223,12 @@
 
 .PrereqPopup {
     position: fixed;
-    top: 0px;
-    left: 0px;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0,0,0,0.5);
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.5);
     -webkit-filter: blur(5px);
     -moz-filter: blur(5px);
     -ms-filter: blur(5px);
@@ -234,9 +239,8 @@
 .PrereqPopubBox {
     position: fixed;
     width: 40%;
-    height: 30%;
     left: 30%;
-    top: 35%;
+    top: 20%;
     background-color: #ffffff;
     
 }
@@ -256,4 +260,32 @@
 
 #SearchBox {
     width: 500px;
+}
+
+.RegularButton {
+    line-height: 30px;
+    text-align: center;
+    vertical-align: middle;
+    width: 150px; 
+    margin-top: 5px;
+}
+
+.DeletePrereq {
+    cursor: pointer;
+    padding: 2px;
+    border: thin solid black;
+    margin: 5px;
+    float: left;
+}
+
+.AddPrereq {
+    cursor: pointer;
+    padding: 2px;
+    border: thin solid black;
+    margin: 5px;
+    float: left;
+}
+
+.ClosePrereqs {
+    cursor: pointer;
 }
