--- a/Code/Front_End/Pages/ManageCourses.cshtml
+++ b/Code/Front_End/Pages/ManageCourses.cshtml
@@ -3,9 +3,35 @@
 @{
     ViewData["Title"] = "Manage Courses";
 }
-
+@Html.AntiForgeryToken()
 <script>
     var CourseListFromServer = '@Html.Raw(Model.CourseListAsJson())';
+
+    function PassCoursesToServer(CourseList) {
+        if (CourseList.length == 0) {
+            return;
+        }
+        
+        $.ajax({
+            type: "POST",
+            url: "/ManageCourses?handler=SendCourses",
+            beforeSend: function (xhr) {
+                xhr.setRequestHeader("XSRF-TOKEN",
+                    $('input:hidden[name="__RequestVerificationToken"]').val());
+            },
+            data: JSON.stringify(CourseList),
+
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+            success: function (response) {
+                alert(response);
+                ResetModifiers();
+            },
+            failure: function (response) {
+                alert(response);
+            }
+        });
+    }
 </script>
 
 <script src="~/js/ListManager.js"></script>
@@ -16,7 +42,7 @@
         <div class="Flex CenterFlex">
             <div class="Flex ">
                 <div class="LabelLeft">Courses Numbered:</div>
-                <div class="LabelRight"><input type="text" style="width: 20%;" value="0" id="MinCourseSearch"/> to <input type="text" style="width: 20%;" value="999" id="MaxCourseSearch"/></div>
+                <div class="LabelRight"><input type="text" style="width: 20%;" value="0" id="MinCourseSearch" /> to <input type="text" style="width: 20%;" value="999" id="MaxCourseSearch" /></div>
             </div>
             <div class="Flex">
                 <div class="LabelLeft">Department:</div>
@@ -32,15 +58,15 @@
             <div class="Flex">
                 <div class="LabelLeft Border">Courses Offered:</div>
                 <div class="LabelRight Flex">
-                    <input type="checkbox" id="SummerSearch"/> Summer
-                    <input type="checkbox" id="FallSearch" checked/> Fall
-                    <input type="checkbox" id="WinterSearch" checked/> Winter
-                    <input type="checkbox" id="SpringSearch" checked/> Spring
+                    <input type="checkbox" id="SummerSearch" /> Summer
+                    <input type="checkbox" id="FallSearch" checked /> Fall
+                    <input type="checkbox" id="WinterSearch" checked /> Winter
+                    <input type="checkbox" id="SpringSearch" checked /> Spring
                 </div>
             </div>
         </div>
 
-        <div><input type="submit" value="Search" class="BigButton" id="SearchCourses"/></div>
+        <div><input type="submit" value="Search" class="BigButton" id="SearchCourses" /></div>
     </div>
 </div>
 
