Implemeneted 'add department' functionality to course management page

--- a/Code/Front_End/Pages/ManageCourses.cshtml
+++ b/Code/Front_End/Pages/ManageCourses.cshtml
@@ -6,7 +6,6 @@
 @Html.AntiForgeryToken()
 <script>
     var CourseListFromServer = '@Html.Raw(Model.CourseListAsJson())';
-
     function PassCoursesToServer(CourseList) {
         if (CourseList.length == 0) {
             return;
@@ -77,6 +76,11 @@
     <div style="width: 100%; text-align: center;">
         <button type="button" class="RegularButton" id="AddNewCourseButton">Add New Course</button>
         <button type="button" class="RegularButton" id="SaveCourses">Save Changes</button>
+    </div>
+
+    <div class="Flex CenterFlex">
+        <div><input type="text" id="NewDepartmentName" style="margin: 5px;" /></div>
+        <div><button type="button" class="RegularButton" id="AddDepartment">Add Department</button></div>
     </div>
 </div>
 
