Finished Manage Users page.

--- a/Code/Front_End/wwwroot/css/Layout.css
+++ b/Code/Front_End/wwwroot/css/Layout.css
@@ -202,6 +202,12 @@
     cursor: pointer;
 }
 
+.WideToggleElement {
+    text-align: center;
+    width: 60px;
+    cursor: pointer;
+}
+
 .DeleteRow {
     text-align: center;
     width: 30px;
