--- a/Code/Front_End/Pages/_Layout.cshtml
+++ b/Code/Front_End/Pages/_Layout.cshtml
@@ -37,7 +37,8 @@
                     <a href="Index">Home</a> |
                     <a href="Advising">Advising</a> |
                     <a href="ManageCourses">Course Management</a> |
-                    <a href="ManageDegrees">Degree Management</a>
+                    <a href="ManageDegrees">Degree Management</a> | 
+                    <a href="UserManagement">User Management</a>
                 </span>
             </div>
         </div>
