--- a/Code/Front_End/Pages/_Layout.cshtml
+++ b/Code/Front_End/Pages/_Layout.cshtml
@@ -35,7 +35,7 @@
             <div class="WideFlex" id="Navigation">
                 <span id="NavLinks">
                     <a href="Index">Home</a> |
-                    <a href="Advising">Advising</a> |
+                    <a href="StudentAdvising">Advising</a> |
                     <a href="ManageCourses">Course Management</a> |
                     <a href="ManageDegrees">Degree Management</a> | 
                     <a href="UserManagement">User Management</a>
