--- a/Code/Front_End/Pages/UserManagement.cshtml
+++ b/Code/Front_End/Pages/UserManagement.cshtml
@@ -13,6 +13,13 @@
 <script src="~/js/UserManagement.js"></script>
 
 <div class="Flex CenterFlex">
+    <div class="CenterFlex" style="width: 100%; text-align: center;">
+        <div class="Border ListHeader" style="width: 30px;">&#10060;</div>
+        <div class="Border ListHeader" style="width: 200px;">Username</div>
+        <div class="Border ListHeader" style="width: 60px;">Admin</div>
+        <div class="Border ListHeader" style="width: 60px;">Active</div>
+        <div class="Border ListHeader" style="width: 60px;">Reset</div>
+    </div>
     <div class="" id="UserContainer">
 
     </div>
