--- a/Code/Front_End/Pages/_Layout.cshtml
+++ b/Code/Front_End/Pages/_Layout.cshtml
@@ -44,6 +44,12 @@
         </div>
         @RenderBody()
     </div>
+    <div class="Flex CenterFlex">
+        <div style="width: 80%; text-align: right; color: #ffffff;">
+            Central Washington University | Department of Computer Science<br />
+            2017 - 2018 | Brian Hooper, Nick Rohde, Rico Adrian
+        </div>
+    </div>
 	@RenderSection("Scripts", required: false)
 </body>
 </html>
