--- a/Code/Front_End/wwwroot/css/Layout.css
+++ b/Code/Front_End/wwwroot/css/Layout.css
@@ -9,7 +9,7 @@
 @font-face {
     font-family: 'Roboto';
     src: url('Roboto-Regular.eot');
-    src: url('Roboto-Regular.eot?#iefix') format('embedded-opentype'), url('Roboto-Regular.woff2') format('woff2'), url('Roboto-Regular.woff') format('woff'), url('Roboto-Regular.ttf') format('truetype'), url('Roboto-Regular.svg#Roboto-Regular') format('svg');
+    src: url('Roboto-Regular.eot?#iefix') format('embedded-opentype'), url('Roboto-Regular.svg#Roboto-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -306,4 +306,18 @@
     text-align: center;
     line-height: 30px;
     font-weight: bold;
+}
+
+.AddCourseRequirement {
+    border: thin solid black;
+    padding: 5px;
+    margin: 5px;
+    cursor: pointer;
+}
+
+.DeleteCourseRequirement {
+    border: thin solid black;
+    padding: 5px;
+    margin: 5px;
+    cursor: pointer;
 }
