--- a/Code/Front_End/wwwroot/css/Generics.css
+++ b/Code/Front_End/wwwroot/css/Generics.css
@@ -30,6 +30,7 @@ input {
     box-sizing: border-box;
 }
 
+
 select {
     width: 100%;
     height: 100%;
@@ -40,7 +41,7 @@ input[type="submit"] {
     box-sizing: border-box;
 }
 
-input[type="text"], input[type="number"] {
+input[type="text"], input[type="number"], input[type="password"] {
     line-height: 30px;
     width: 100%;
     box-sizing: border-box;
