Made some useablility and user interface changes, fixed some bugs.

--- a/Code/Front_End/Pages/Advising.cshtml
+++ b/Code/Front_End/Pages/Advising.cshtml
@@ -79,10 +79,23 @@
     </div>
 
     <div class="Flex CenterFlex">
-        <div class="MiddleFlex">
-            <div>Minimum Credits per quarter: <input type="text" id="MinCredits" style="width: 60px;" value="0" /></div>
-            <div>Maximum Credits per quarter: <input type="text" id="MaxCredits" style="width: 60px;" value="18" /></div>
-            <div>Taking Summer Courses: <input type="checkbox" id="TakingSummerCourses" /></div>
+        <div class="Block Border">
+            <div class="Title">Constraints</div>
+
+            <div class="Flex" style="line-height: 30px;">
+                <div style="width: 250px;">Minimum Credits per quarter:</div>
+                <div><input type="text" id="MinCredits" style="width: 60px;" value="0" /></div>
+            </div>
+
+            <div class="Flex" style="line-height: 30px;">
+                <div style="width: 250px;">Maximum Credits per quarter:</div>
+                <div><input type="text" id="MaxCredits" style="width: 60px;" value="0" /></div>
+            </div>
+
+            <div class="Flex" style="line-height: 30px;">
+                <div style="width: 250px;">Taking Summer Courses:</div>
+                <div><input type="checkbox" id="TakingSummerCourses" /></div>
+            </div>
         </div>
     </div>
 
