--- a/Code/Front_End/Pages/ManageCourses.cshtml
+++ b/Code/Front_End/Pages/ManageCourses.cshtml
@@ -71,11 +71,7 @@
     <div style="width: 100%; text-align: center;">
         <button type="button" class="RegularButton" id="AddNewCourseButton">Add New Course</button>
         <button type="button" class="RegularButton" id="SaveCourses">Save Changes</button>
-    </div>
-
-    <div class="Flex CenterFlex">
-        <div><input type="text" id="NewDepartmentName" style="margin: 5px;" /></div>
-        <div><button type="button" class="RegularButton" id="AddDepartment">Add Department</button></div>
+        <button type="button" class="RegularButton" id="AddDepartment">Add Department</button>
     </div>
 </div>
 
