--- a/Code/Front_End/Pages/ManageDegrees.cshtml
+++ b/Code/Front_End/Pages/ManageDegrees.cshtml
@@ -84,20 +84,16 @@
         </div>
     </div>
     <div class="Flex CenterFlex">
-        <div class="Border" style="width: 80%;">
+        <div class="Border" style="min-width: 800px;">
             <div class="Title" id="SearchResults">Search Results: </div>
             <div class="Flex CenterFlex" id="CourseContainer"></div>
         </div>
     </div>
     <div class="Flex CenterFlex">
-        <div class="Flex CenterFlex Border" style="width: 80%;">
-            <div class="Block Padded" id="RequirementContainer" style="min-width: 800px;">
-                <div class="Title">Current Degree:</div><div class="Title" id="CurrentDegreeName"></div>
-                <div id="DegreeRequirementBox">
-
-                </div>
-                <div><button class="BigButton" id="SaveDegreeButton">Save Changes</button></div>
-            </div>
+        <div class="Border" id="RequirementContainer" style="min-width: 800px;">
+            <div class="Title">Current Degree:</div><div class="Title" id="CurrentDegreeName"></div>
+            <div id="DegreeRequirementBox" class="Flex CenterFlex">&nbsp;</div>
+            <div class="Flex CenterFlex"><button class="RegularButton" id="SaveDegreeButton">Save Changes</button></div>
         </div>
     </div>
 </div>
