--- a/Code/Front_End/wwwroot/css/Layout.css
+++ b/Code/Front_End/wwwroot/css/Layout.css
@@ -346,3 +346,13 @@
 .ReqQuarters {
     width: 200px;
 }
+
+#LoadingBox {
+    position: fixed;
+    width: 40%;
+    height: 40%;
+    left: 30%;
+    top: 20%;
+    background-color: white;
+    border: 2px solid black;
+}
