--- a/Code/Front_End/Pages/Index.cshtml
+++ b/Code/Front_End/Pages/Index.cshtml
@@ -13,7 +13,7 @@
         $("#Userbox").hide();
         $("#LoginBox").hide();
 
-        
+
         if (ShowLoginBox) {
             $("#LoginBox").show();
         } else {
@@ -26,6 +26,10 @@
 <div class="Flex CenterFlex">
     <div style="font-size: 3em;">Computer Science Advising Tool</div>
 </div>
+<div class="Title" style="color: red;">
+    @IndexModel.LoginErrorMessage
+    @{ IndexModel.LoginErrorMessage = ""; }
+</div>
 <div id="CredentialsContainer" class="Flex CenterFlex">
 
 
@@ -34,18 +38,32 @@
         Admin<br />
         <a href="#">[ Logout ]</a>
     </div>
-
-
-    <div id="LoginBox" class="Border">
-        <div class="Title">User Login: </div>
-        <div class="Flex">
-            <div class="LabelLeft">Username</div>
-            <div class="LabelRight"><input type="text" /></div>
+    
+    <form method="post">
+        <div id="LoginBox" class="Border">
+            <div class="Title">User Login: </div>
+            <div class="Flex">
+                <div class="LabelLeft"><label asp-for="Login.Username">Username</label></div>
+                <div class="LabelRight"><input asp-for="Login.Username" /></div>
+            </div>
+            <div><span asp-validation-for="Login.Username" style="color: red;"></span></div>
+            <div class="Flex">
+                <div class="LabelLeft"><label asp-for="Login.Password">Password</label></div>
+                <div class="LabelRight"><input type="password" asp-for="Login.Password"></div>
+            </div>
+            <div><span asp-validation-for="Login.Password" style="color: red;"></span></div>
+            <button type="submit" class="BigButton">Login</button>
         </div>
-        <div class="Flex">
-            <div class="LabelLeft">Password</div>
-            <div class="LabelRight"><input type="password" /></div>
-        </div>
-        <button type="button" id="LoginButton" class="BigButton">Login</button>
-    </div>
+    </form>
 </div>
+
+
+
+
+
+
+
+
+
+
+
